--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
                     
                     <div class="detail-content" id="detail-but1">
-                        <h4>BUT Réseaux & Télécoms – 1re année</h4>
+                        <h4>BUT Réseaux & Télécoms - 1re année</h4>
                         <p class="date">2025-2026 - IUT de Colmar</p>
                         <p>Première année centrée sur les bases des réseaux informatiques, l’administration système et les technologies web. La formation pose les fondations nécessaires pour comprendre les architectures IP et les services associés.</p>
                         <p><strong>Modules principaux :</strong></p>
@@ -135,7 +135,7 @@
 
                     <div class="detail-content" id="detail-pix">
                         <h4>Certification PIX</h4>
-                        <p class="date">Session 2025 — Compétences numériques certifiées</p>
+                        <p class="date">2025 - Compétences numériques certifiées</p>
                         <p>Certification nationale évaluant les usages numériques essentiels, la sécurité en ligne et la résolution de problèmes informatiques. Elle atteste d’un niveau solide sur la gestion des données et la maîtrise des outils modernes.</p>
                         <p><strong>Points forts :</strong></p>
                         <ul>
@@ -162,7 +162,7 @@
                         <p>Projet à moyen terme : devenir ingénieur Dev Cloud/DevOps,<br>Développer des compétences approfondies sur le PTP (Precision Time Protocol).</p>
                         <p><strong>Prochaines étapes :</strong></p>
                         <ul>
-                            <li>Alternance en équipe Cloud/plateforme traitant de l’audiovisuel temps réel</li>
+                            <li>Alternance en équipe Cloud/plateforme</li>
                             <li>Certifications professionnelles (AWS, Azure, Kubernetes, etc.)</li>
                             <li>Projets personnels mêlant automatisation, multimédia et expérimentation PTP</li>
                         </ul>
@@ -193,7 +193,7 @@
                     </div>
                 </article>
                 <!-- Carte large pour Piscine 42 avec images à droite (ordre HTML: contenu puis images) -->
-                <article class="experience-card large">
+                <article class="experience-card large" id="piscine-42-card">
                     <div class="experience-content">
                         <h3>Piscine 42</h3>
                         <p class="experience-date">Juillet 2025</p>
@@ -209,8 +209,7 @@
                     </div>
                     <div class="experience-images">
                         <img class="exp-img top" src="image/421.png" alt="Piscine 42 - exercice" />
-                        <img class="exp-img middle" src="image/422.jpeg" alt="Piscine 42 - collaboration" />
-                        <img class="exp-img bottom" src="image/423.JPG" alt="Piscine 42 - projet" />
+                        <img class="exp-img bottom" src="image/422.png" alt="Piscine 42 - projet" />
                     </div>
                 </article>
             </div>
