--- a/loisirs.html
+++ b/loisirs.html
@@ -94,7 +94,8 @@
                 <article class="experience-card large">
                     <div class="experience-content">
                         <h2>Randonnée en montagne</h2>
-                        <p>J’aime particulièrement marcher en Suisse, surtout dans le Valais. Lors de ma dernière sortie, j’ai réalisé une randonnée de 45 km jusqu’au col du Scex, avec un départ à 6h30 et un retour à 20h30. Le parcours passait de la chaleur de la vallée à la neige dès 1 800 m d’altitude.</p>
+                        <p>J’aime particulièrement la marche, lors de ma dernière sortie, j’ai réalisé une randonnée de 45 km jusqu’au col du Scex, dans le canton du Valais en Suisse. Un départ à 6h30 et un retour à 20h30.</p>
+                        <p>Le parcours passait de la chaleur de la vallée à la neige dès 1 800 m d’altitude.</p>
                         <p>La randonnée est pour moi un vrai plaisir : elle développe mon endurance, mon goût de l’effort et mon attachement aux activités en plein air.</p>
                     </div>
                     <div class="experience-images">
