--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     </div>
                     <div class="experience-images">
                         <img class="exp-img top" src="image/421.png" alt="Piscine 42 - exercice" />
-                        <img class="exp-img bottom" src="image/422.png" alt="Piscine 42 - projet" />
+                        <img class="exp-img bottom" src="image/422.webp" alt="Piscine 42 - projet" />
                     </div>
                 </article>
             </div>
