--- a/loisirs.html
+++ b/loisirs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -74,8 +74,8 @@
                     </div>
                     <div class="experience-images">
                         <img class="exp-img top" src="image/Ciné1.jpg" alt="Projection ciné-club" />
-                        <img class="exp-img middle" src="image/cine2.jpg" alt="Équipe du ciné-club" />
-                        <img class="exp-img bottom" src="image/cine3.jpg" alt="Organisation d'une séance" />
+                        <img class="exp-img middle" src="image/Ciné2.png" alt="Équipe du ciné-club" />
+                        <img class="exp-img bottom" src="image/Ciné3.jpg" alt="Organisation d'une séance" />
                     </div>
                 </article>
 
