--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-telephone-fill" viewBox="0 0 16 16" style="margin-right: 5px;">
                             <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
                         </svg>
-                        <strong style="color: black;">Téléphone: </strong>+33 6 81 61 63 05
+                        <strong style="color: black;">Téléphone: +33 6 81 61 63 05</strong>
                     </p>
                 </div>
                 <div class="contact-card">
@@ -68,7 +68,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-envelope-fill" viewBox="0 0 16 16" style="margin-right: 5px;">
                             <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
                         </svg>
-                        <strong style="color: black;">Mail: </strong>louis.erb@outlook.fr
+                        <strong style="color: black;">Mail: louis.erb@outlook.fr</strong>
                     </p>
                 </div>
             </div>
@@ -319,7 +319,8 @@
                     <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   |   </a>
                     <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   |   </a>
                     <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse   |   </a>
-                    <a href="https://www.iutcolmar.uha.fr/" target="_blank" rel="noreferrer">IUT Colmar</a>
+                    <a href="https://www.iutcolmar.uha.fr/" target="_blank" rel="noreferrer">IUT Colmar   |   </a>
+                    <a href="https://github.com/glufy100" target="_blank" rel="noreferrer">GitHub   |   </a>
                 </p>
             </div>
         </div>
