--- a/loisirs.html
+++ b/loisirs.html
@@ -117,8 +117,8 @@
                     <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   |   </a>
                     <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   |   </a>
                     <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse   |   </a>
-                    <a href="https://www.iutcolmar.uha.fr/" target="_blank" rel="noreferrer">IUT Colmar</a>
-                </p>
+                    <a href="https://www.iutcolmar.uha.fr/" target="_blank" rel="noreferrer">IUT Colmar   |   </a>
+                    <a href="https://github.com/glufy100" target="_blank" rel="noreferrer">GitHub   |   </a>                </p>
             </div>
         </div>
     </footer>
